--- a/app/javascript/stylesheets/application.scss
+++ b/app/javascript/stylesheets/application.scss
@@ -127,3 +127,53 @@ header {
     background-image: -o-linear-gradient(bottom, #16A085 0%, #F4D03F 100%);
     background-image: linear-gradient(to top, #16A085 0%, #F4D03F 100%);
 }
+
+.project-image::after {
+    content: '';
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: black;
+    opacity: 0;
+    position: absolute;
+    transition: opacity 300ms linear;
+}
+.project-image:hover::after {
+    opacity: .6;
+}
+.project-btn {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    opacity: 0;
+    transition: opacity 300ms linear;
+    color: white;
+    margin-top: -1.5rem;
+    margin-left: -4rem;
+    height: 3rem;
+    width: 8rem;
+    border: 1px solid;
+}
+.project-btn-label {
+    
+    position: relative;
+    text-transform: uppercase;
+    letter-spacing: .1em;
+}
+.project-btn-label::after {
+    content: '';
+    position: absolute;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+    height: 2px;
+    background: currentColor;
+    transform: scaleX(0);
+    transform-origin: right;
+    transition: transform 250ms ease-in;
+}
+.project-btn-label:hover::after {
+    transform: scaleX(1);
+    transform-origin: left;
+}
