Added links to projects

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -14,7 +14,7 @@
         
         <div class="mt-6 md:mt-8 lg:mt-10 flex flex-row justify-center">
             <div class="grid grid-cols-1 md:grid-cols-2 gap-3">
-                <%= link_to "https://drive.google.com/file/d/1Hn-yqU4cf5DnQ-8xceX-GtNdzp-R0ik6/view?usp=sharing" do %>
+                <%= link_to "https://drive.google.com/file/d/1uB1MXHDyCDfh0Qozig08xtwJCafObSSB/view?usp=sharing" do %>
                     <button class="rounded cta-btn w-24 text-xs font-bold">
                         CV
                     </button>
@@ -62,7 +62,7 @@
                 <div id="project-1-desktop" class="tab-panel active">
                     <div id="project-1-image" class="max-w-full project-image z-20 relative">
                         <%= image_tag "word-frequency-comparator-full-short.png", alt: "Word Frequency Comparator", class: "max-w-full" %>
-                        <%= link_to "#", id: "project-1-btn", class: "project-btn flex flex-row justify-center items-center z-30" do %>
+                        <%= link_to "https://www.word-frequency-comparator.com", target: :_blank, id: "project-1-btn", class: "project-btn flex flex-row justify-center items-center z-30" do %>
                             <div class="project-btn-label text-2xl">
                                 Launch
                             </div>
@@ -72,8 +72,8 @@
             
                 <div id="project-1-mobile" style="height: 500px;" class="tab-panel overflow-y-scroll">
                     
-                    <%= link_to "#", class: "relative z-20 mobile-image" do %>
-                        <%= image_tag "word-frequency-comparator-mobile.png", alt: "Word Frequency Comparator", class: "max-w-full w-1/2 mx-auto" %>
+                    <%= link_to "https://www.word-frequency-comparator.com", class: "relative z-20 mobile-image" do %>
+                        <%= image_tag "word-frequency-comparator-mobile.png", target: :_blank, alt: "Word Frequency Comparator", class: "max-w-full w-9/12 md:w-1/2 mx-auto" %>
                     <% end %>
                     
                 </div>
@@ -123,7 +123,7 @@
                 <div id="project-2-desktop" class="tab-panel active">
                     <div id="project-2-image" class="max-w-full project-image z-20 relative">
                         <%= image_tag "recipe-reaction-reporter-full.png", alt: "Recipe Reaction Reporter", class: "max-w-full" %>   
-                        <%= link_to "#", id: "project-2-btn", class: "project-btn flex flex-row justify-center items-center z-30" do %>
+                        <%= link_to "https://www.recipe-reaction-reporter.com", target: :_blank, id: "project-2-btn", class: "project-btn flex flex-row justify-center items-center z-30" do %>
                             <div class="project-btn-label text-2xl">
                                 Launch
                             </div>
@@ -131,8 +131,8 @@
                     </div>
                 </div>
                 <div id="project-2-mobile" style="height: 500px" class="tab-panel overflow-y-scroll">
-                    <%= link_to "#" do %>
-                        <%= image_tag "recipe-reaction-reporter-mobile2.png", alt: "Recipe Reaction Reporter", class: "w-1/2 max-w-full mx-auto" %>
+                    <%= link_to "https://www.recipe-reaction-reporter.com", target: :_blank do %>
+                        <%= image_tag "recipe-reaction-reporter-mobile2.png", alt: "Recipe Reaction Reporter", class: "max-w-full w-9/12 md:w-1/2 mx-auto" %>
                     <% end %>
                 </div>
                 <div id="project-2-info" class="tab-panel font-medium text-xs leading-tight p-2 l-blue-gradient">
@@ -190,7 +190,7 @@
                 <div id="project-3-desktop" class="tab-panel active">
                     <div id="project-3-image" class="max-w-full project-image z-20 relative">
                         <%= image_tag "music-lesson-scheduler-full.png", alt: "Music Lesson Scheduler", class: "max-w-full" %>  
-                        <%= link_to "#", id: "project-3-btn", class: "project-btn flex flex-row justify-center items-center z-30" do %>
+                        <%= link_to "https://www.rebecca-railton.com", target: :_blank, id: "project-3-btn", class: "project-btn flex flex-row justify-center items-center z-30" do %>
                             <div class="project-btn-label text-2xl">
                                 Launch
                             </div>
@@ -198,8 +198,8 @@
                     </div>
                 </div>
                 <div id="project-3-mobile" style="height: 500px" class="tab-panel overflow-y-scroll">
-                    <%= link_to "#" do %>
-                        <%= image_tag "music-lesson-scheduler-mobile.png", alt: "Recipe Reaction Reporter", class: "w-1/2 max-w-full mx-auto" %>
+                    <%= link_to "https://www.rebecca-railton.com", target: :_blank do %>
+                        <%= image_tag "music-lesson-scheduler-mobile.png", alt: "Recipe Reaction Reporter", class: "max-w-full w-9/12 md:w-1/2 mx-auto" %>
                     <% end %>
                 </div>
                 <div id="project-3-info" class="tab-panel font-medium text-xs leading-tight p-2 l-blue-gradient">
