--- a/app/views/shared/_head.html.erb
+++ b/app/views/shared/_head.html.erb
@@ -8,6 +8,8 @@
 
   <%= csrf_meta_tags %>
   <%= csp_meta_tag %>
+  
+  <meta name="robots" content="noindex">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   
