--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -1,5 +1,5 @@
 <header class="sticky top-0 z-50">
-  <nav class="flex flex-col w-full md:flex-row items-stretch md:items-center text-blue-900 px-5 md:px-10 lg:px-20 l-blue-gradient">
+  <div class="flex flex-col w-full md:flex-row items-stretch md:items-center text-blue-900 px-5 md:px-10 lg:px-20 l-blue-gradient">
     <div class="self-center md:self-auto">
       <h1 class="text-4xl font-bold header-name leading-tight md:pb-4 pt-2">Alistair Divorty</h1>
     </div>
@@ -21,5 +21,5 @@
       </li>
       <div class="z-10 pill"></div>
     </ul>
-  </nav>
+  </div>
 </header>
