--- a/app/views/shared/_head.html.erb
+++ b/app/views/shared/_head.html.erb
@@ -18,7 +18,7 @@
   <%= stylesheet_pack_tag  'application', media: 'all' %>
   <%= javascript_pack_tag  'application', 'data-turbolinks-track': 'reload' %>
   
-  <link rel="stylesheet" type="text/css" href="trix.css">
-  <script type="text/javascript" src="trix.js"></script>
+  <!--<link rel="stylesheet" type="text/css" href="trix.css">-->
+  <!--<script type="text/javascript" src="trix.js"></script>-->
   <%#= javascript_include_tag 'https://js.stripe.com/v3/', 'data-turbolinks-track': 'reload' %>
 </head>
