Added trix pack tag to head

--- a/app/views/shared/_head.html.erb
+++ b/app/views/shared/_head.html.erb
@@ -16,9 +16,10 @@
   <%= favicon_link_tag asset_path('favicon.png') %>
   <%= stylesheet_link_tag  'application', media: 'all' %>
   <%= stylesheet_pack_tag  'application', media: 'all' %>
+  <%= stylesheet_pack_tag  './trix.css', media: 'all' %>
   <%= javascript_pack_tag  'application', 'data-turbolinks-track': 'reload' %>
   
-  <link rel="stylesheet" type="text/css" href="trix.css">
+  <!--<link rel="stylesheet" type="text/css" href="trix.css">-->
   <!--<script type="text/javascript" src="trix.js"></script>-->
   <%#= javascript_include_tag 'https://js.stripe.com/v3/', 'data-turbolinks-track': 'reload' %>
 </head>
