--- a/app/views/shared/_sidebars.html.erb
+++ b/app/views/shared/_sidebars.html.erb
@@ -1,6 +1,6 @@
 <div class="flex flex-col fixed items-center right-0 bottom-0 mr-5 md:mr-10 lg:mr-20">
     <div class="mb-5 leading-tight" style="margin-right: -4px; writing-mode: vertical-rl;">
-        <%= mail_to "alistair.divorty@gmail.com", "alistair.divorty@gmail.com", class: "styled-link-vertical" %>
+        <%= mail_to "contact@alistair-divorty.com", "contact@alistair-divorty.com", class: "styled-link-vertical" %>
     </div>
     <svg width="6" height="100" xmlns="http://www.w3.org/2000/svg">
          <path d="M 3 0 L 3 100" stroke="#2A4365"/>
