Corrected information for Project 2

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -156,7 +156,7 @@
                     <p class="mb-2">To filter recipes by keyword, the user can utilize the search field in the Recipe index view. Searches are
                     performed server-side against the name and ingredients columns of the Recipe model.</p>
                     <p>When the user, after having viewed the details of an individual recipe, returns to the paginated list of recipes, they are
-                    presented with the subset of recipes that they were previously browsing. This is achieved by lifitng the state of the Recipe component
+                    presented with the subset of recipes that they were previously browsing. This is achieved by lifting the state of the Recipe component
                     up to the App component by means of callback functions.</p>
                 </div>
             </div>
